--- a/view/frontend/templates/checkout/payment/method/sepadirectdebit.phtml
+++ b/view/frontend/templates/checkout/payment/method/sepadirectdebit.phtml
@@ -11,6 +11,6 @@ use Magento\Framework\View\Element\Template;
 
 /** @version 2.0.11 */
 ?>
-<div class="<?= /* @noEscape */ $css('my-4') ?>">
+<div class="<?= $escaper->escapeHtmlAttr($css('my-4')) ?>">
     <?= $escaper->escapeHtml(__('Please enter these fields as they appear on your bank account.')) ?>
 </div>
