--- a/view/frontend/templates/checkout/payment/method/transfer.phtml
+++ b/view/frontend/templates/checkout/payment/method/transfer.phtml
@@ -11,6 +11,6 @@ use Magento\Framework\View\Element\Template;
 
 /** @version 2.0.13 */
 ?>
-<div class="<?= $escaper->escapeHtmlAttr($css('my-4')) ?>">
+<div class="<?= $escaper->escapeHtml($css('my-4')) ?>">
     <?= $escaper->escapeHtml(__('You will receive an email with further payment instructions when you place your order.')) ?>
 </div>
