--- a/view/frontend/templates/checkout/sidebar/preview/payment_details/additional.phtml
+++ b/view/frontend/templates/checkout/sidebar/preview/payment_details/additional.phtml
@@ -19,7 +19,7 @@ if (empty($details)) {
     return;
 }
 ?>
-<dl class="<?= $escaper->escapeHtmlAttr($css('grid grid-cols-2')) ?>">
+<dl class="<?= $escaper->escapeHtml($css('grid grid-cols-2')) ?>">
     <?php foreach ($details as $detailLabel => $detailValue): ?>
     <dt><?= $escaper->escapeHtml(__($detailLabel)) ?></dt>
     <dd><?= /* @noEscape */ $detailValue ?></dd>
